Fix text overflow ellipses in sidebar (#1692)

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -235,13 +235,16 @@
   flex: 1 1 .01%;
 }
 
+.sidebar #full-list :is(li, a) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .sidebar #full-list li {
   padding: 0;
   margin-right: 30px;
   line-height: 27px;
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .sidebar #full-list li.docs {
@@ -305,7 +308,6 @@
 .sidebar #full-list li a {
   padding: 3px 0 3px 15px;
   color: var(--sidebarItem);
-  overflow: hidden;
 }
 
 .sidebar #full-list > li > a {
@@ -313,11 +315,6 @@
   width: 100%;
   height: 27px;
   line-height: 20px;
-}
-
-.sidebar #full-list li a.expand,
-.sidebar #full-list li .sections-list > li {
-  text-overflow: ellipsis;
 }
 
 .sidebar #full-list li .current-section > a {
